Load in next slide into memory to avoid flickering

--- a/src/components/SlideComponent/SlideComponent.css
+++ b/src/components/SlideComponent/SlideComponent.css
@@ -16,7 +16,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   filter: blur(25px);
-  transform: scale(1.1); 
+  transform: scale(1.2); 
   z-index: 0;
 }
 
